# fmi-jira

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: AppData.cpp  AppData.h  Application.cpp  Application.h  CommandDispatcher.cpp  CommandDispatcher.h
src/commands/: AddCommentCommand.cpp  AddCommentCommand.h  AddTagCommand.cpp  AddTagCommand.h  AddUserToProjectCommand.cpp  AddUserToProjectCommand.h  ArchiveProjectCommand.cpp  ArchiveProjectCommand.h  AssignTaskCommand.cpp  AssignTaskCommand.h  ChangeStatusCommand.cpp  ChangeStatusCommand.h  CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CreateProjectCommand.cpp  CreateProjectCommand.h  CreateTaskCommand.cpp  CreateTaskCommand.h  FilterTasksCommand.cpp  FilterTasksCommand.h  HelpCommand.cpp  HelpCommand.h  JoinProjectCommand.cpp  JoinProjectCommand.h  ListProjectsCommand.cpp  ListProjectsCommand.h  ListTasksCommand.cpp  ListTasksCommand.h  LoginCommand.cpp  LoginCommand.h  LogoutCommand.cpp  LogoutCommand.h  MyTasksCommand.cpp  MyTasksCommand.h  RegisterCommand.cpp  RegisterCommand.h  SearchTasksCommand.cpp  SearchTasksCommand.h  (+4 more)
src/enums/: ProjectStatus.h  Role.h  StageStatus.h  TaskPriority.h  TaskStatus.h  TaskType.h
src/exceptions/: AppException.cpp  AppException.h  AuthException.cpp  AuthException.h  DuplicateException.cpp  DuplicateException.h  NotFoundException.cpp  NotFoundException.h  PermissionException.cpp  PermissionException.h  StateException.cpp  StateException.h  ValidationException.cpp  ValidationException.h
src/factories/: UserFactory.cpp  UserFactory.h
(+93 files in other folders)
